--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,27 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - ./metrics/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./src/metrics/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
       - "9090:9090"
     networks:
       - tiny-net
     depends_on:
       - tinycache
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - tiny-net
+    depends_on:
+      - prometheus
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./observability/provisioning:/etc/grafana/provisioning
+      - ./observability/grafana/dashboards:/var/lib/grafana/dashboards
 
 networks:
   tiny-net:
